--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #92E275;
+  
 }
-
+.App .nav{
+  text-decoration: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
